@@ -38,3 +38,8 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+test {
+    jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
+    jvmArgs += ["-Djdk.instrument.traceUsage"]
+}
